<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.kifo</groupId>
    <artifactId>DiscordBot</artifactId>
    <version>3.0.1</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.kifo.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef> <!--jar contains manifest with main class-->
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>dv8tion</id>
            <name>m2-dv8tion</name>
            <url>https://m2.dv8tion.net/releases</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>arbjergDev-snapshots</id>
            <name>Lavalink Repository</name>
            <url>https://maven.lavalink.dev/snapshots</url>
        </repository>
        <repository>
            <id>arbjergDev-releases</id>
            <name>Lavalink Repository</name>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
        <repository>
            <id>lavalink-maven</id>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Discord Bot - JDA-->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>6.1.1</version>
        </dependency>

        <!-- Music library - Lavaplayer (https://github.com/lavalink-devs/lavaplayer)-->
        <dependency>
            <groupId>dev.arbjerg</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>2.2.4</version>
        </dependency>

        <!-- YouTube plugin - Necessary to load tracks from YouTube (https://github.com/lavalink-devs/youtube-source)-->
        <dependency>
            <groupId>dev.lavalink.youtube</groupId>
            <artifactId>youtube-plugin</artifactId>
            <version>5909466dc6c1260addba191eece67934f29808c9</version>
        </dependency>

        <!-- Spotify Plugin - Additional src plugins -->
        <dependency>
            <groupId>com.github.topi314.lavasrc</groupId>
            <artifactId>lavasrc-plugin</artifactId>
            <version>4.8.1</version>
            <exclusions>
                <exclusion>
                    <groupId>com.github.topi314.lavalyrics</groupId>
                    <artifactId>lavalyrics</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.github.topi314.lavalyrics</groupId>
                    <artifactId>lavalyrics-plugin-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>

        <!-- Injection - Guice -->
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <version>7.0.0</version>
        </dependency>

        <!-- Json files - Gson-->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
    </dependencies>
</project>